--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -59,11 +59,11 @@
 
                         <form id="deleteForm">
                         <div class="userInput mb-5">
-                            <h4 class="list">새 비밀번호 확인</h4>
+                            <h4 class="list">비밀번호 확인</h4>
                             <div class="input-group">
                                 <input type="password" name="PwConfirm" id="PwConfirm"
                                        class="form-control form-control-sm" maxlength="20"
-                                       placeholder="새 비밀번호 한 번 더 입력해주세요."/>
+                                       placeholder="비밀번호 한 번 더 입력해주세요."/>
                             </div>
                         </div>
                         </form>
