--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -89,10 +89,6 @@
 
 </style>
 
-<!--사이드바-->
-<!--<div class="d-flex flex-nowrap">-->
-<!--    <th:block th:replace="~{fragments/sidebar}"></th:block>-->
-
     <div class="w3-content w3-container w3-margin-top container position-relative pb-5">
 
 
@@ -132,9 +128,9 @@
                     <input type="submit" value="로그인" class="btn btn-primary btn-md"><br/>
                 </div>
                 <div id="find-info" class="text-center">
-                    <span id="findId_btn">
-                        <a href="/findId">아이디 찾기</a></span>
+                    <span id="findId_btn"><a href="/findId">아이디 찾기</a></span>
                     <span><a href="/findPw">비밀번호 찾기</a></span>
+                    <span><a href="/join">회원가입</a></span>
                 </div>
             </div>
         </form>
