--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -161,10 +161,12 @@
 
             let emailCheck = false;
             let idCheck = false;
-
             let emailAuthNum = null;
 
             document.getElementById('joinBtn').addEventListener('click', function (event) {
+                // 인증번호 입력 확인
+                let inputNum = $("#number").val();
+
                 // 간단한 유효성 검사
                 let reg_pw = /^(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,15}$/;
                 let id = document.getElementsByName('id')[0].value;
@@ -172,6 +174,64 @@
                 let pwconfirm = document.getElementsByName('pwconfirm')[0].value;
                 let name = document.getElementsByName('name')[0].value;
                 let email = document.getElementsByName('email')[0].value;
+
+
+                if (id === "") {
+                    alert('아이디를 입력해주십시오.');
+                    event.preventDefault(); // 폼 제출 막기
+                    document.getElementsByName('id')[0].focus();
+                    return false;
+                } else if (pw === "") {
+                    alert('비밀번호를 입력해주십시오.');
+                    event.preventDefault(); // 폼 제출 막기
+                    document.getElementsByName('pw')[0].focus();
+                    return false;
+                } else if (pwconfirm === "") {
+                    alert('비밀번호 재확인을 입력해주십시오.');
+                    event.preventDefault(); // 폼 제출 막기
+                    document.getElementsByName('pwconfirm')[0].focus();
+                    return false;
+                } else if (name === "") {
+                    alert('성명을 입력해주십시오.');
+                    event.preventDefault(); // 폼 제출 막기
+                    document.getElementsByName('name')[0].focus();
+                    return false;
+                } else if (email === "") {
+                    alert('이메일을 입력해주십시오.');
+                    event.preventDefault(); // 폼 제출 막기
+                    document.getElementsByName('email')[0].focus();
+                    return false;
+                } else if (!idCheck) {
+                    alert('아이디 중복을 확인하여 주십시오.');
+                    event.preventDefault(); // 폼 제출 막기
+                    document.getElementsByName('id')[0].focus();
+                    return false;
+                } else if (!reg_pw.test(pw)) {
+                    alert('비밀번호 양식을 다시 확인하여 주십시오.');
+                    event.preventDefault(); // 폼 제출 막기
+                    console.log(event.target);
+                    document.getElementsByName('pw')[0].focus();
+                    return false;
+                } else if (pw !== pwconfirm) {
+                    alert('비밀번호와 비밀번호 재입력 값이 같아야 합니다.');
+                    event.preventDefault(); // 폼 제출 막기
+                    document.getElementsByName('pwconfirm')[0].focus();
+                    return false;
+                } else if (!emailCheck) {
+                    alert('이메일을 인증하여 주십시오.');
+                    event.preventDefault(); // 폼 제출 막기
+                    document.getElementsByName('email')[0].focus();
+                    return false;
+                } else if (inputNum === "") {
+                    alert("이메일 인증번호를 입력해주세요.");
+                    event.preventDefault(); // 폼 제출 막기
+                    document.getElementsByName('email')[0].focus();
+                    return;
+                } else if (emailAuthNum !== inputNum ){
+                    alert("이메일 인증번호가 맞지않습니다.");
+                    event.preventDefault(); // 폼 제출 막기
+                    return false;
+                }
 
                 // 데이터를 JSON 형식으로 구성
                 let userData = {
@@ -242,8 +302,6 @@
                 });
             });
 
-
-
             //     이메일 인증
             function sendNumber() {
                 let email = document.getElementsByName('email')[0].value;
@@ -263,13 +321,11 @@
                     event.preventDefault(); // 폼 제출 막기
                     } else {
                         emailCheck = true;
-                        alert('적절한 이메일 주소 입니다.');
                 }
-
 
                 console.log("번호보내기클릭");
                 $("#mail_number").css("display", "block");
-                alert("입력한 메일로 인증번호를 발송하였습니다.")
+                alert("입력한 메일로 인증번호를 발송하였습니다.");
 
                 $.ajax({
                     url: "/api/join/sendEmail",
@@ -280,11 +336,14 @@
                     }),
                     contentType: "application/json",
                     success: function (authNum) {
+                        // 메시지 초기화
+                        // $('#emailvailable').hide().text('');
+                        // $('#emailNotAvailable').hide().text('');
+
                         emailAuthNum = authNum;
-                        console.log("성공했을지도?");
                     }, error: function (request, status, error) {
                         alert("code:" + request.status + "\n" + "message:" + request.responseText + "\n" + "error:" + error);
-                        alert("인증 보내기 실패")
+                        alert("인증 보내기 실패");
                     }
                 });
             }
@@ -297,6 +356,8 @@
                     alert("인증되었습니다.");
                 } else {
                     alert("인증번호가 다릅니다.");
+                    event.preventDefault(); // 폼 제출 막기
+                    return false;
                 }
             }
 
